--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "0404": "file:",
     "express": "^5.1.0",
     "express-validator": "^7.2.1"
   }
